--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
+@import '@mantine/core/styles.css';
 
 @theme {
-  --color-bgColor: #162052;
-  --color-whiteColor: #fff;
-  --color-grayColor: #bbb;
-  --color-blueColor: #689af8;
-  --color-wheat: #f5deb3;
-}
-
-
-:root {
-  --bgColor: #162052;
-  --whiteColor: #fff;
-  --grayColor: #bbb;
-  --blueColor: #689af8;
-}
-
-* {
-  font-family: 'Poppins', sans-serif;
-}
-
-body {
-  width: 100%;
-  background-color: var(--bgColor);
-  position: relative;
-  color: var(--whiteColor);
-}
-
-a {
-  text-decoration: none;
+    --color-bgColor: #0A192F;
+    --color-primaryColor: #64FFDA;
+    --color-textColor: #8892B0;
 }
