--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,13 @@ section {
     transition: all, .2s ease-in-out;
     object-fit: fill;
 }
+
+
+/* Contact section */
+
+.contact-email-link:hover {
+    outline: none;
+    box-shadow: 4px 4px 0 0 #5acfbd;
+    transform: translate(-4px, -4px);
+    font-weight: 500;
+}
