--- a/src/index.css
+++ b/src/index.css
@@ -41,17 +41,32 @@ section {
     transform: translate(-4px, -4px);
 }
 
-.fade-in-section {
+.fade-up-section {
   opacity: 0;
-  transform: translateY(10vh);
+  transform: translateY(15vh);
   visibility: hidden;
-  transition: opacity 0.6s ease-out, transform 0.s ease-out;
+  transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
   will-change: opacity, visibility;
 }
-.fade-in-section.is-visible {
+
+.fade-up-section.is-visible {
   opacity: 1;
   transform: none;
   visibility: visible;
+}
+
+.fade-down-section {
+    opacity: 0;
+    transform: translateY(-5vh);
+    visibility: hidden;
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    will-change: opacity, visibility;
+}
+
+.fade-down-section.is-visible {
+    opacity: 1;
+    transform: none;
+    visibility: visible;
 }
 
 /* Mantine overrides */
@@ -72,7 +87,7 @@ section {
 
 .navbar-link {
     opacity: 0;
-    transform: translateY(-2vh);
+    transform: translateY(-10vh);
     visibility: hidden;
     transition: opacity 0.6s ease-out, transform 0.s ease-out;
     will-change: opacity, visibility;
