--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
     --breakpoint-xs: 30rem;
 }
 
+#root {
+    background-color: #0a192f;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23102545' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
 html {
     scrollbar-width: thin;
     scrollbar-color: #495670 var(--color-bgColor);
@@ -181,6 +186,13 @@ section {
 
 .m_539e827b:hover {
     background-color: #112240;
+}
+
+@media (max-width: 640px) {
+    .m_576c9d4 {
+        overflow-x: scroll;
+        overflow-y: hidden;
+   }
 }
 
 .experience-tab-content ul li {
